[project]
name = "agentcore-deploy-demo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "llama-index-workflows>=0.1.0",
    "llama-agents-agentcore>=0.8.0",
    "python-dotenv>=1.0.0",
    "llama-cloud>=2.1",
    "aioboto3>=13.0.0",
    "pydantic>=2.0",
]

[tool.llamadeploy]
name = "agentcore-deploy-demo"

[tool.llamadeploy.workflows]
kyc = "workflow:workflow"
